Corrected image formats

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
 }
 /*****HEADER*****/
 header {
-        background: url(../img/hero.png);
+        background: url(../img/hero.jpg);
         background-size: cover;
         height: 800px;
 }
